# asyncle

./: .clang-format  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: EXTERNAL_DEPENDENCIES.md  FORMAT.md  FORMAT_JSON_EXAMPLES.md  FORMAT_LIBRARY.md  FUTURE_ASYNCLE_JSON.md  HARDWARE_MODULE_DESIGN.md  IO.md  JSON_PARSER_ANALYSIS.md  README.md
docs/adr/: 001-format-layer-zero-coupling.md
docs/archive/: CLEANUP_SUMMARY.md  FORMAT_JSON_EXAMPLES.md  FORMAT_LIBRARY.md  FUTURE_ASYNCLE_JSON.md  JSON_PARSER_ANALYSIS.md  README.md
include/: asyncle.hpp
include/asyncle/: compat.hpp  concept.hpp
include/asyncle/base/: command.hpp  cpo.hpp
include/asyncle/compat/: concepts.hpp  cxx23.hpp  expected.hpp  ranges.hpp  type_traits.hpp
include/asyncle/concepts/: basic_concepts.hpp  error_concepts.hpp  operation_concepts.hpp  utility_concepts.hpp  value_concepts.hpp
include/asyncle/format/: json.hpp  serialize.hpp
include/asyncle/hardware/: memory.hpp
include/asyncle/hardware/arch/: aarch64.hpp  current.hpp  detect.hpp  generic.hpp  x86_64.hpp
include/asyncle/hardware/platform/: cache_detection.hpp
include/asyncle/io/: file.hpp  l0_interface.hpp  l0_linux.hpp  memory_mapping.hpp  mmap.hpp  process.hpp  result.hpp
include/asyncle/meta/: entries.hpp  predicates.hpp
include/cxx23_compat/: expected.hpp
include/format/: json.hpp  serialize.hpp
include/format/json/: concepts.hpp  glaze.hpp  parser.hpp  simdjson.hpp  types.hpp
include/format/serialize/: concepts.hpp  glaze.hpp
include/platform/: file.hpp  file_linux.hpp  hardware.hpp  mmap.hpp  mmap_linux.hpp  process.hpp  process_linux.hpp
scripts/: install-deps.sh  setup-hooks.sh
src/hardware/: memory_linux.cpp  memory_macos.cpp  memory_windows.cpp
src/hardware/platform/: cache_detection_linux.cpp  cache_detection_macos.cpp  cache_detection_windows.cpp
src/io/: l0_linux.cpp
src/platform/: file_linux.cpp  hardware_linux.cpp  hardware_macos.cpp  hardware_windows.cpp  mmap_linux.cpp  process_linux.cpp
tests/: basic.cpp  test_asyncle_format.cpp  test_asyncle_io.cpp  test_basic_concepts.cpp  test_command.cpp  test_cpo.cpp  test_entries.cpp  test_error_concepts.cpp  test_format_abstraction.cpp  test_format_isolation.cpp  test_format_json.cpp  test_hardware_memory.cpp  test_l0_io.cpp  test_operation_concepts.cpp  test_platform_file.cpp  test_platform_mmap.cpp  test_platform_process.cpp  test_predicates.cpp  test_utility_concepts.cpp  test_value_concepts.cpp
